syntax = "proto3";

package order;

import "google/protobuf/timestamp.proto";

option go_package = "./order";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}

message Order {
  string order_id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  OrderStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  OrderStatus status = 2;
}

message UpdateOrderStatusResponse {
  Order order = 1;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  PAID = 2;
  CANCELLED = 3;
  FAILED = 4;
}

message OrderCreatedEvent {
  string order_id = 1;
  string user_id = 2;
  double total_amount = 3;
  google.protobuf.Timestamp created_at = 4;
}

message OrderPaidEvent {
  string order_id = 1;
  string user_id = 2;
  double total_amount = 3;
  google.protobuf.Timestamp paid_at = 4;
}

message OrderFailedEvent {
  string order_id = 1;
  string user_id = 2;
  string reason = 3;
  google.protobuf.Timestamp failed_at = 4;
}